# certpost

./: .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  SESSION-SUMMARY.md  go.mod  pyproject.toml  wheel.json
certpost/: __init__.py  __main__.py  acme.py  argbuilder.py  cli.py  client_cli.py  client_fetch.py  cloudflare.py  crypto.py  dns.py  log.py  namecheap.py  proxy.py  renewal.py  server.py  storage.py  technitium.py  version.py
certpost/web/: index.html
cmd/certpost/: main.go
cmd/certpost-server/: main.go
docs/: docinfo.json  mkdocs.yml
docs/mkdocs/: index.md  licence.md  usage.md
internal/acme/: client.go
internal/client/: fetch.go
internal/colour/: colour.go
internal/cryptoutil/: cryptoutil.go
internal/dns/: cloudflare.go  demo.go  factory.go  provider.go  technitium.go
internal/logbuf/: logbuf.go
internal/oidcauth/: oidcauth.go  oidcauth_test.go
internal/proxy/: proxy.go
internal/renewal/: renewal.go
internal/server/: server.go  spec.go
internal/storage/: storage.go
internal/version/: version.go
internal/web/: embed.go  index.html
